--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "Simple workflow for working with and customizing Bootstrap 5",
   "main": "index.js",
-  "scripts": {
-    "sass:build": "sass --no-source-map scss/styles.scss css/styles.css",
-    "sass:watch": "sass --no-source-map --watch scss/styles.scss css/styles.css"
+"scripts": {
+    "sass": "sass --no-source-map scss/styles.scss css/styles.css",
+    "sass:watch": "sass --no-source-map scss/styles.scss css/styles.css --watch",
+    "build": "sass --no-source-map scss/styles.scss css/styles.css"
   },
   "author": "Faizullah Laghari",
   "license": "MIT",
